--- a/notebook/Lab_2_2_kNN.ipynb
+++ b/notebook/Lab_2_2_kNN.ipynb
@@ -11,23 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "M2DWzwCyFqNr"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp2-2-grandadmiralmv/src/Lab_2_2_kNN.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Import the functions from the solution\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mLab_2_2_kNN\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m knn, plot_probability_histograms, plot_roc_curve, evaluate_classification_metrics, plot_2Dmodel_predictions, plot_calibration_curve\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the modules you'll need later\n",
     "\n",
@@ -42,10 +30,10 @@
     "\n",
     "# Add Lab_2_2_kNN.py to the path\n",
     "import sys\n",
-    "sys.path.append('p2-2-grandadmiralmv/src/Lab_2_2_kNN.py')\n",
+    "sys.path.append('../src')\n",
     "\n",
     "# Import the functions from the solution\n",
-    "from src.Lab_2_2_kNN import knn, plot_probability_histograms, plot_roc_curve, evaluate_classification_metrics, plot_2Dmodel_predictions, plot_calibration_curve"
+    "from Lab_2_2_kNN import knn, plot_probability_histograms, plot_roc_curve, evaluate_classification_metrics, plot_2Dmodel_predictions, plot_calibration_curve"
    ]
   },
   {
@@ -77,8 +65,7 @@
     "# Load the train and test data you generated (use the name \"train_df\" and \"test_df\")\n",
     "train_df = pd.read_csv(\"train.dat\",sep=\"\\t\")\n",
     "test_df  = pd.read_csv(\"test.dat\",sep=\"\\t\")\n",
-    "# Convert output variable to factor\n",
-    "# TODO"
+    "# Convert output variable to factor\n"
    ]
   },
   {
