--- a/notebook/Lab_2_2_kNN.ipynb
+++ b/notebook/Lab_2_2_kNN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "id": "M2DWzwCyFqNr"
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "id": "j-ue2KRNFqNv"
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "id": "b6F2BtZdFqNx"
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "JmB6PazkFqN0"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "id": "q0H0q2ZEFqN0"
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_predictions \u001b[38;5;241m=\u001b[39m plot_2Dmodel_predictions(X_train[INPUTS_KNN]\u001b[38;5;241m.\u001b[39mvalues, y_train\u001b[38;5;241m.\u001b[39mvalues, knn_fit, \u001b[38;5;241m50\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_predictions \u001b[38;5;241m=\u001b[39m plot_2Dmodel_predictions(X_train[INPUTS_KNN]\u001b[38;5;241m.\u001b[39mvalues, y_train\u001b[38;5;241m.\u001b[39mvalues, knn_fit, \u001b[38;5;241m50\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\velaz\\segundo_imat\\Machine not-learning\\p2-2-grandadmiralmv\\notebook\\../src\\Lab_2_2_kNN.py:231\u001b[0m, in \u001b[0;36mplot_2Dmodel_predictions\u001b[1;34m(X, y, model, grid_points_n)\u001b[0m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;66;03m# # Predict on mesh grid\u001b[39;00m\n\u001b[0;32m    230\u001b[0m grid \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mc_[xx\u001b[38;5;241m.\u001b[39mravel(), yy\u001b[38;5;241m.\u001b[39mravel()]\n\u001b[1;32m--> 231\u001b[0m probs \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict_proba(grid)[:, \u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(xx\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m    233\u001b[0m \u001b[38;5;66;03m# Use Seaborn for the scatter plot\u001b[39;00m\n\u001b[0;32m    234\u001b[0m sns\u001b[38;5;241m.\u001b[39mscatterplot(x\u001b[38;5;241m=\u001b[39mX[:, \u001b[38;5;241m0\u001b[39m], y\u001b[38;5;241m=\u001b[39mX[:, \u001b[38;5;241m1\u001b[39m], hue\u001b[38;5;241m=\u001b[39my, palette\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSet1\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax\u001b[38;5;241m=\u001b[39max[\u001b[38;5;241m1\u001b[39m])\n",
       "File \u001b[1;32mc:\\Users\\velaz\\segundo_imat\\Machine not-learning\\p2-2-grandadmiralmv\\notebook\\../src\\Lab_2_2_kNN.py:121\u001b[0m, in \u001b[0;36mknn.predict_proba\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    119\u001b[0m         counts\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    120\u001b[0m     predict\u001b[38;5;241m.\u001b[39mappend(counts)\n\u001b[1;32m--> 121\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(predict)\n",
       "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2500,) + inhomogeneous part."
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "a-wXpaciFqN1"
    },
@@ -236,7 +236,7 @@
        " 'F1 Score': 0.0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "0dR9t5dTFqN1"
    },
@@ -264,7 +264,7 @@
        " 'F1 Score': 0.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "596SA2Y3hLpg"
    },
@@ -288,8 +288,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m probs \u001b[38;5;241m=\u001b[39m knn_fit\u001b[38;5;241m.\u001b[39mpredict_proba(X_train\u001b[38;5;241m.\u001b[39mvalues)\n",
-      "File \u001b[1;32mc:\\Users\\velaz\\segundo_imat\\Machine not-learning\\p2-2-grandadmiralmv\\notebook\\../src\\Lab_2_2_kNN.py:119\u001b[0m, in \u001b[0;36mknn.predict_proba\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    117\u001b[0m                 labels\u001b[38;5;241m.\u001b[39mremove(i)\n\u001b[0;32m    118\u001b[0m     predict\u001b[38;5;241m.\u001b[39mappend(counts)\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(predict)\n",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m probs \u001b[38;5;241m=\u001b[39m knn_fit\u001b[38;5;241m.\u001b[39mpredict_proba(X_train\u001b[38;5;241m.\u001b[39mvalues)\n",
+      "File \u001b[1;32mc:\\Users\\velaz\\segundo_imat\\Machine not-learning\\p2-2-grandadmiralmv\\notebook\\../src\\Lab_2_2_kNN.py:121\u001b[0m, in \u001b[0;36mknn.predict_proba\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    119\u001b[0m         counts\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    120\u001b[0m     predict\u001b[38;5;241m.\u001b[39mappend(counts)\n\u001b[1;32m--> 121\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(predict)\n",
       "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (796,) + inhomogeneous part."
      ]
     }
